--- a/css/style.css
+++ b/css/style.css
@@ -6,43 +6,53 @@ body {
   background-color: #dadada;
 }
 
+h1 {
+  font-size: 50px;
+}
+
 .container {
+  background-color: #fff;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows:  50px minmax(100px, auto);
   margin: 0 auto;
-  width: 320px;
+  width: 700px;
 }
 
 nav, section, aside, footer {
   background-color: #7e36aa;
-  float: left;
-  height: 300px;
-  width: 50%;
 }
 
 nav {
-  height: 5vh;
-  margin-bottom: 10px;
-  width: 100%;
+  grid-column: 1 / 7;
+  grid-row: 1 / 2;
 }
+
 section {
   background-color: #7e7e87;
-  min-height: 200px;
-  margin-right: 1%;
-  width: 100%;
+  grid-column: 1 / 7;
+  grid-row: 2 / 12;
 }
 aside {
   background-color: #30155d;
-  height: 200px;
-  width: 100%;
+  grid-column: 3 / 6;
+  grid-row: 6 / 8;
 }
 footer {
   background-color: #2f4977;
-  height: 200px;
-  margin-top: 10px;
-  width: 100%;
+  grid-column: 1 / 7;
+  grid-row: 12 / 13;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 720px;
+  }
 }
 
 
-@media screen and (min-width: 768px) {
+/*@media screen and (min-width: 768px) {
   .container {
     width: 720px;
   }
@@ -68,4 +78,4 @@ footer {
     margin-top: 10px;
     width: 100%;
   }
-}
+}*/
